<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.sander.lotrscenariogenerator.MainActivity"
    tools:layout_editor_absoluteY="50dp"
    android:orientation="vertical"
    android:weightSum="100"
    android:gravity="center">



    <GridLayout
        android:layout_height="0dp"
        android:layout_width="wrap_content"
        android:padding="16dp"
        android:columnCount="4"
        android:rowCount="2"
        android:layout_weight="90"
        app:layout_constraintBottom_toTopOf="@+id/generate_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <ImageButton
            android:id="@+id/tree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="0"
            android:contentDescription="@string/tree_image"
            android:onClick="onClickMonsterDeck"
            app:srcCompat="@drawable/monsterdeck_tree" />

        <ImageButton
            android:id="@+id/spider"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="0"
            android:contentDescription="@string/spider_image"
            android:onClick="onClickMonsterDeck"
            app:srcCompat="@drawable/monsterdeck_spider" />

        <ImageButton
            android:id="@+id/orc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:layout_row="0"
            android:contentDescription="@string/orc_image"
            android:onClick="onClickMonsterDeck"
            app:srcCompat="@drawable/monsterdeck_orc" />

        <ImageButton
            android:id="@+id/footprint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="3"
            android:layout_row="0"
            android:contentDescription="@string/footprint_image"
            android:onClick="onClickMonsterDeck"
            app:srcCompat="@drawable/monsterdeck_footprint" />

        <ImageButton
            android:id="@+id/river"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:layout_row="1"
            android:contentDescription="@string/river_image"
            android:onClick="onClickMonsterDeck"
            app:srcCompat="@drawable/monsterdeck_river" />

        <ImageButton
            android:id="@+id/eye"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="1"
            android:contentDescription="@string/eye_image"
            android:onClick="onClickMonsterDeck"
            app:srcCompat="@drawable/monsterdeck_eye" />

        <ImageButton
            android:id="@+id/raven"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="1"
            android:contentDescription="@string/raven_image"
            android:onClick="onClickMonsterDeck"
            app:srcCompat="@drawable/monsterdeck_raven" />

        <ImageButton
            android:id="@+id/tower"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="3"
            android:layout_row="1"
            android:contentDescription="@string/tower_image"
            android:onClick="onClickMonsterDeck"
            app:srcCompat="@drawable/monsterdeck_tower" />
    </GridLayout>

    <Button
        android:id="@+id/generate_button"
        android:layout_width="300dp"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:onClick="generate"
        android:text="@string/generate" />

</LinearLayout>
